--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=8080
 MONGODB_URI=mongodb+srv://sachinandan2121:6NkjtmI3JWTSldmM@ecom.iwbf1qc.mongodb.net
 DB_NAME=ecom
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=https://e-com-client-td2p.vercel.app
 CLOUDINARY_URL=cloudinary://637713989859935:VnevFfi8WTEhelCe2XU_exa1pNY@dna2fhyac
 CLOUDINARY_CLOUD_NAME=dna2fhyac
 CLOUDINARY_API_KEY=637713989859935
